# controllers/quicktipController.js
@@ -1,0 +1,8 @@
+const QuickTip = require('./../models/quicktipModel');
+const factory = require('./handlerFactory');
+
+exports.getAllQuickTips = factory.getAll(QuickTip);
+exports.getQuickTip = factory.getOne(QuickTip);
+exports.createQuickTip = factory.createOne(QuickTip);
+exports.updateQuickTip = factory.updateOne(QuickTip);
+exports.deleteQuickTip = factory.deleteOne(QuickTip);
